assets/style.css
/*Google font*/
@import url('https://fonts.googleapis.com/css2?family=Mooli&family=Raleway+Dots:wght@100&display=swap');



/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    color: #494343;
}

.footer {
    margin-top: 0;
}

h1 {
    font-family: 'Mooli', sans-serif;
    letter-spacing: 2px;
    color: #ffffff;
    text-align: center;
}

h2,
h3 {
    font-family: 'Raleway Dots', sans-serif;
    text-align: spacing 2px;
    color: #ffffff;
    text-align: center;
}

/* Header */
header {
    background-color: rgb(10, 80, 22);
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #256937;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

header a {
    text-decoration: none;
    color: #ffffff;
}


#menu {
    font-size: 100%;
    letter-spacing: 2px;
    list-style-type: none;
    font-family: 'Raleway Dots', sans-serif;
}

#menu>li {
    margin-bottom: 1em;
    margin-top: 1em;
}

.active {
    border-bottom: 0px solid #3a3a3a;
}

/*Nav Bar drop down menu*/
nav {
    position: absolute;
    background-color: rgb(10, 80, 22);
    width: 100%;
    left: 0;
    padding: 0rem;
    box-shadow: 0 2px 2px #256937;
    display: none;
    top: 100%;
}

/*Drop down menu styles*/
#drop-down-menu:checked~nav {
    display: block;
}

#drop-down-menu {
    display: none;
}

.drop-down-menu-label {
    font-size: 2rem;
}

.drop-down-menu-label i {
    color: #ffffff;
}

/* Main content */
main {
    /* Make main element take up any surplus space to push footer down */
    flex: 1 0 auto;
    margin-top: 47px;
}

/*Hero image*/
#hero {
    height: 600px;
    width: 100%;
    background: url("../assets/images/heroimagebc.jpg") no-repeat center center/cover;
    position: relative;
}

#about-us {
    background-color: rgba(184, 182, 182, 0.7);
    font-size: 120%;
    width: 42%;
    position: absolute;
    bottom: 30px;
    min-height: 200px;
    padding-top: 25px;
    padding-left: 10px;
}

/*Customer messages element styles*/
.customer {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
    justify-content: center;
}

.customer-title {
    font-family: 'Raleway Dots', sans-serif;
    font-size: 180%;
    display: flex;
    justify-content: center;
    align-items: top center;
    margin-top: 100px;
    margin-bottom: 2rem;
    color: #256937;
}

.title-message {
    font-family: 'Raleway Dots', sans-serif;
    font-size: 160%;
    display: flex;
    justify-content: center;
    align-items: top center;
    margin-top: 10px;
    margin-bottom: 2rem;
    color: #256937;
}

.customer-container {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    margin-top: 8rem;
}

.customer-content div {
    margin: 2rem;
    display: flex;
    flex-direction: column;
    width: 500px;
    align-items: center;
    font-style: italic;
    font-size: 130%;
}

.customer-message {
    justify-content: left;
    padding: 1em;  
}

.customer-name {
    color: #256937;
    font-weight: 600;
    font-style: italic;
    margin-top: 20px;
}

/*customer message image styles*/

.plant-image {
    height: 500px;
    justify-content: center;
}

.plant-image img {
    width: 100%;
    height: 100%;
    display:block;
    object-fit: cover;
    border-radius: 50%;
}


/*Contact prompt styles*/
.contact-prompt {
    background: #ffffff;
}

.contact-prompt-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 5rem auto;
    font-family: 'Raleway Dots', sans-serif;
    font-style: italic;
}

.contact-prompt-text {
    padding: 5rem;
    text-align: center;
    color: #3a3a3a;
    font-weight: 200;
}

.prompt-button {
    border-radius: 2px;
    font-size: 100%;
    padding: 14px 40px;
    background-color: #256937;
    color: #ffffff;
    margin-top: 10px;
}

.button-prompt {
    text-decoration: none;
    color: #ffffff;
}

/*Gallery Styles 2nd page*/

.gallery {
    display: flex;
}

.images {
    display: grid;
    width: 100%;
    gap: 1rem;
    grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
}

.images img {
    display: block;
}

.product-image {
    height: 500px;
    justify-content: center;
}

.product-image img {
    width: 100%;
    height: 100%;
    display:block;
    object-fit: cover;
    border-radius: 50%;
}

/*Proucts page syling, 3rd page*/

.products-hero {
    background: url("../assets/images/productshero1.webp") no-repeat center center/cover;
    height: 600px;
    width: 100%;
    position: relative;
}
.products-about {
    background-color: rgba(184, 182, 182, 0.7);
    font-size: 100%;
    width: 42%;
    position: absolute;
    bottom: 90px;
    min-height: 200px;
    padding-top: 25px;
    padding-left: 10px;
}

.product-images {
    height: 500px;
    justify-content: center;
}

.product-image img {
    width: 100%;
    height: 100%;
    display: block;
    object-fit: cover;
}

/*Contact Us form styles*/
.contact-us {
    background: url("../assets/images/contactbg.jpg") no-repeat center center/cover;
    background-size: cover;
    padding: 10px 10px 0 10%;
    flex-grow: 1;
    width: 100%;
}

.contact-us-form {
    color: #256937;
    background-color: rgba(184, 182, 182, 0.7)
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    justify-content: center;
    max-width: 60rem;
    margin-top: 5em;
    margin-left: 2em;
    font-family: 'Raleway Dots', sans-serif;
}

.contact-us-form h2 {
    color: #256937;
    margin-bottom: 30px;
    width: 100%;
}

.text-input {
    background: transparent;
    color: #256937;
    width: 70%;
    height: 25px;
    margin: 5px 0 10px 0;
    border: 1px solid #256937;
    padding: 0 5px;
}

.your-message{
    border: #256937;
    width: 100%;
    margin-bottom: 10px;
    display: flex;
    flex-direction: column;
}
.text-input1 {
    margin-top: 20px;
    margin-bottom: 20px;
    border: 1px solid #256937;
    height: 100px;
    width: 50%;
    background: transparent;
}

.checkbox-buttons {
    width: 100%;
    margin-top: 30px;
    margin-bottom: 10px;
}

.myfile{
    border-radius: 2px;
    font-size: 100%;
    background-color: rgba(255, 255, 255, 0.7);
    color: #494343;
    }

.submit-issue {
    border-radius: 2px;
    font-size: 100%;
    padding: 14px 40px;
    background-color: #256937;
    color: #ffffff;
    margin-top: 10px;
}

/*Response page styles*/

.response {
    background:url("../assets/images/responsebg.jpg") no-repeat center center/cover;
    background-size: cover;
    padding: 10px 10px 0 10%;
    flex-grow: 1;
    width:100%;
}

.response-box {
    background-color: rgba(46, 44, 44, 0.7);
    font-family: 'Raleway Dots', sans-serif;
    font-size: 120%;
    width: 42%;
    position: absolute;
    bottom:90px;
    min-height: 200px;
    margin-top: 50em;
    padding-top: 25px;
}

/* Footer styles for all pages*/

#social-media-pages {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-media-pages i {
    font-size: 180%;
    padding: 5%;
    color: #256937;
}

/*Mobile devices*/
@media screen and (min-width:768px) {

    /*Header element*/
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }

    #menu {
        display: flex;
    }

    #menu>li {
        padding-left: 1rem;
    }

    .drop-down-menu-label {
        display: none;
    }

    #logo {
        font-size: 280%;
        line-height: 75px;
        margin: 0 0.5rem;
    }

    /*Main element*/
    main {
        margin-top: 47px;
    }

    /*Hero*/
    #about-us {
        width: 40%;
        left: 20px;
    }

    /*Messages Element*/
    .customer1,
    .customer2,
    .customer3 {
        display: flex;
        flex-direction: column;
    }

    .customer1>div,
    .customer2>div,
    .customer3>div {
        display: flex;
        flex-direction: column;
    }
}
 /*Larger devices*/
 @media screen and (min-width: 922px) {
     #menu a:hover {
         border-bottom: 1px solid #ffffff;
     }
 }

